# optimization

./: CMakeLists.txt  README.md
manual_optimizer/: CMakeLists.txt  manual_optimizer.cpp
slam_optimizer_ceres/: CMakeLists.txt  camera_reprojection.cpp  camera_reprojection.h
utils/: CMakeLists.txt  pose.hpp  random.hpp  simulate_data.cpp  simulate_data.h
